--- a/index.html
+++ b/index.html
@@ -3,194 +3,42 @@
 <html>
 
 <head>
-  <title>Title of the document</title>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">  
-  <meta name="viewport" content="width=device-width, user-scalable=no">
+  <title>Vaani</title>
+  <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1">
+  <meta charset="utf-8">
+  <meta name="theme-color" content="#000">
+
+  <link rel="stylesheet" href="style/css/main.css">
+
 </head>
 
 
-<style type='text/css'>
-.ring {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  position: absolute;
-  background-color: transparent;
-  -webkit-animation-name: ani; 
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-duration: 3s;
-  -webkit-animation-direction: normal;
-  animation-name: ani; 
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-duration: 3s;
-  animation-direction: normal;
-  border-top: 15px solid transparent;
-  border-left: 15px solid blue;
-  border-bottom: 15px solid transparent;
-
-}
-
-
-@-webkit-keyframes ani {
-0% {-webkit-transform: scale(0.01); opacity: 0} 
-1% {-webkit-transform: scale(0.01); opacity: 0.8} 
-95% {-webkit-transform: scale(1); opacity: 0.8;}
-100% {-webkit-transform: scale(1); opacity: 0;}
-}
-
-@keyframes ani {
-0% {transform: scale(0.01); opacity: 0} 
-1% {transform: scale(0.01); opacity: 0.8} 
-95% {transform: scale(1); opacity: 0.8;}
-100% {transform: scale(1); opacity: 0;}
-}
-
-#r2 { -webkit-animation-delay: -1s;animation-delay: -1s;}
-#r3 { -webkit-animation-delay: -2s;animation-delay: -2s;}
-#r4 { -webkit-animation-delay: -3s;animation-delay: -3s;}
-
-.ringr {
-  width: 300px;
-  height: 300px;
-  border-radius: 50%;
-  position: absolute;
-  background-color: transparent;
-  -webkit-animation-name: anir; 
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -webkit-animation-duration: 3s;
-  -webkit-animation-direction: normal;
-  animation-name: anir; 
-  animation-iteration-count: infinite;
-  animation-timing-function: linear;
-  animation-duration: 3s;
-  animation-direction: normal;
-  border-top: 15px solid transparent;
-  border-right: 15px solid blue;
-  border-bottom: 15px solid transparent;
-
-}
-
-.sbringr {
-  width: 8px;
-  height: 8px;
-  border-radius: 50%;
-  position: absolute;
-  background-color: blue;
-  top:161px;
-  left:206px;
-  margin-left: -50px;
-}
-
-@-webkit-keyframes anir {
-  0% {-webkit-transform: scale(0.01); opacity: 0} 
-  1% {-webkit-transform: scale(0.01); opacity: 0.8} 
-  95% {-webkit-transform: scale(1); opacity: 0.8;}
-  100% {-webkit-transform: scale(1); opacity: 0;}
-}
-
-@keyframes anir {
-  0% {transform: scale(0.01); opacity: 0} 
-  1% {transform: scale(0.01); opacity: 0.8} 
-  95% {transform: scale(1); opacity: 0.8;}
-  100% {transform: scale(1); opacity: 0;}
-}
-
-#r2r { -webkit-animation-delay: -1s;animation-delay: -1s;}
-#r3r { -webkit-animation-delay: -2s;animation-delay: -2s;}
-#r4r { -webkit-animation-delay: -3s;animation-delay: -3s;}
-
-html{
-  overflow:hidden
-}
-
-body{
-  margin-top: 0px; margin-bottom: 0px; margin-left: 0px; margin-right: 0px;
-  padding: 0;
-  color: black; font-size: 10pt; font-family: "Trebuchet MS", sans-serif;
-  background-color: #E2E2E2;
-  overflow:hidden;
-}
-
-.maindiv
-{
-  text-align:center;
-  width:100vw;
-  height:100vh;   
-  position:relative;
-}
-
-.speak
-{
-  position: absolute; 
-  bottom: 0;  
-  margin-left: -45px;
-}
-
-</style>
-
 <body>
-<div class='maindiv'>
+  <!-- The Views -->
+  <div id="views">
+    <div id="listening-animation" style="display:none">
+      <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv1" >
+        <div id="r1" class="ring"></div>
+        <div id="r2" class="ring"></div>
+        <div id="r3" class="ring"></div>
+        <div id="r4" class="ring"></div>
+      </div>
 
-  <div id="listening" style="display:none">
-    <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv1" >
-    <div id="r1" class="ring"></div>
-    <div id="r2" class="ring"></div>
-    <div id="r3" class="ring"></div>
-    <div id="r4" class="ring"></div>
+      <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv2">
+        <div class="sbringr"></div>
+        <div id="r1" class="ringr"></div>
+        <div id="r2r" class="ringr"></div>
+        <div id="r3r" class="ringr"></div>
+        <div id="r4r" class="ringr"></div>
+      </div>
     </div>
 
-    <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv2">
-    <div class="sbringr"></div>
-    <div id="r1" class="ringr"></div>
-    <div id="r2r" class="ringr"></div>
-    <div id="r3r" class="ringr"></div>
-    <div id="r4r" class="ringr"></div>
-    </div>
+    <div id="status-icon"></div>
+    <div id="status-text"></div>
+    <div id="microphone-button"></div>
   </div>
 
-  <div id="messages" style="display:none">
-      <br>
-      <img src="img/icon-big-04.png"/> 
-  </div>
-
-  <div id="weather" style="display:none">
-      <br>
-      <img src="img/sun.png"/> 
-  </div>
-
-  <div id="tel" style="display:none">
-      <br>
-      <img src="img/tel.png"/> 
-  </div>
-
-  <div id="text" style="display:none">
-      <br>
-      <img src="img/mail.png"/> 
-  </div>
-
-  <div id="battery" style="display:none">
-      <br>
-      <img src="img/battery.png"/> 
-  </div>
-
-
-   <div id="fox" style="display:block">
-      <br>
-      <img src="img/ff.png"/> 
-  </div>
-
-  <div  style="left:30px; display:block;font-style: italic ; font-weight: normal; font-size: 1.6rem; text-align:center; width:80%; position:absolute;bottom:200px;display:visible;" id="lblstatus">
-  Push the microphone and say what you want.
-  </div>
-
-  <div style="width:100%;display:block">
-     <img id="speak" class="speak" src="img/mic.png"/>
-  </div>
-</div>
-
-<script src="vdialer.js" type="text/javascript" >  </script>
+  <!-- Main App Entry Point -->
+  <script src="main.js" type="text/javascript"></script>
 </body>
 </html>
