Added a few more apps you can open. Cleaned up some listening animation CSS.

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
 <body>
   <!-- The Views -->
   <div id="views">
-    <div id="listening-animation" style="display:none">
-      <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv1" >
+    <div id="listening-animation" style="display: none">
+      <div id="ringdiv1"
+           style="width: 96%; position: relative; display: block">
         <div id="r1" class="ring"></div>
         <div id="r2" class="ring"></div>
         <div id="r3" class="ring"></div>
         <div id="r4" class="ring"></div>
       </div>
 
-      <div style="width:400px;background-color:#1BA1E2;margin:auto;position:relative;display:block" id="ringdiv2">
+      <div id="ringdiv2"
+           style="width: 96%; position: relative; display: block">
         <div class="sbringr"></div>
         <div id="r1" class="ringr"></div>
         <div id="r2r" class="ringr"></div>
@@ -33,7 +35,7 @@
       </div>
     </div>
 
-    <div id="status-icon"></div>
+    <div id="status-icon" class="fxos-logo"></div>
     <div id="status-text"></div>
     <div id="microphone-button"></div>
   </div>
