* Added correct logo * Added list of commands available * Re-stylized UI * We now prevent the user from pressing the   microphone button when text-to-speech is active.

--- a/index.html
+++ b/index.html
@@ -37,6 +37,17 @@
 
     <div id="status-icon" class="fxos-logo"></div>
     <div id="status-text"></div>
+    <div id="commands-list">
+      <ul>
+        <li>Call &lt;contact&gt;</li>
+        <li>Text &lt;contact&gt;</li>
+        <li>Check my messages</li>
+        <li>What's my battery level</li>
+        <li>Open my calendar</li>
+        <li>Open my email</li>
+        <li>Open my messages</li>
+      </ul>
+    </div>
     <div id="microphone-button"></div>
   </div>
 
